# python-ebook-reader

./: .gitignore  README.md  ai_translator.py  config_definitions.py  env.example  pyproject.toml  requirements.txt  tts_reader.py
core/: engines.py  processor.py  progress.py  translator_args_definition.py  translator_engines.py  translator_processor.py  tts_args_definition.py  tts_engines.py  tts_processor.py
utils/: args_manager.py  config_wizzard.py  env_generator.py  file_manager.py  progress.py  text_processor.py  voice_lister.py
